# mcp-secret

./: LICENSE  README.md
ai_poem_generator/: generate_poem.py
authed_mcp_demo/: requirements.txt  test_op_client.py
authed_mcp_demo/mcp1_server/: __init__.py  op_client.py  server.py  server_new.py
authed_mcp_demo/mcp2_middleware/: direct.py  middleware.py  test_server.py
authed_mcp_demo/mcp2_middleware/middleware/: __init__.py  middleware.py  pyproject.toml
