[project]
name = "middleware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authed>=0.2.4",
    "authed-mcp>=0.1.3",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.4.1",
    "requests>=2.32.3",
]
